k8s/base/nativeservice-ctl.sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nativeservice-ctl
  namespace: t9k-czx
  labels:
    control-plane: nativeservice-ctl
    controller-tools.k8s.io: "1.0"
spec:
  selector:
    matchLabels:
      control-plane: nativeservice-ctl
      controller-tools.k8s.io: "1.0"
  serviceName: nativeservice-ctl
  template:
    metadata:
      labels:
        control-plane: nativeservice-ctl
        controller-tools.k8s.io: "1.0"
    spec:
      containers:
      - name: nativeservice-ctl
        image: tsz.io/t9k/nativeservice-ctl:czx
        args: ["--show-error-trace", "--v=2", "--t9k-group=czx"]
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 100m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 200Mi
      terminationGracePeriodSeconds: 10
