k8s/base/t9k.gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: t9k
  namespace: t9k-czx
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
