k8s/base/kiali.vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: t9k-czx
spec:
  hosts:
  - "*"
  gateways:
  - t9k
  http:
  - match:
    - uri:
        prefix: /t9k-czx/kiali/
    rewrite:
     uri: /
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
